k8s/manifests/network-system/traefik/static-routes/pikvm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pikvm
  namespace: network-system
  annotations:
    traefik.frontend.passHostHeader: "false"
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: ${CLUSTER_CERT}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: network-system-rfc1918-ips@kubernetescrd
    external-dns/is-public: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: "monitor-share"
    hajimari.io/appName: "piKVM"

spec:
  tls:
    - secretName: pikvm-${CLUSTER_NAME}-tls
      hosts:
        - &host "pikvm.${CLUSTER_DOMAIN}"

  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pikvm
                port:
                  name: https
